src/components/Contact/Contact.less
.Contact {
  margin-top: -0.1em;
  margin-bottom: 0.4em;

  .ContactRow {
    padding-top: 0.1em;
    padding-bottom: 0.1em;
  }

  .IconContainer,
  .TextContainer {
    vertical-align: middle;
  }

  .IconContainer {
    font-size: 2.25em;
    width: 1.25em;
    height: 1em;
    line-height: 1.0;
  }

  .TextContainer {
    font-size: 1.125em;
  }

  // 500px logo
  .icon-500px {
    margin-top: -0.1em;
    display: block;

    &:before {
      font-family: sans-serif;
      content: "5∞";
      font-weight: 900;
      font-size: 0.7em;
    }
  }
}

